feat: Add Restart Game Feature and Improve UI
- Added the ability to restart the game when it ends.
- Enhanced the visual design of the game for a better user experience.
- Included a dropdown for selecting trivia categories.
- Updated HTML structure to support the new features.
- Refactored JavaScript to handle game state resetting and category-based question fetching.
- Included a detailed README file with instructions and project information.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="game-container">
-    <h1>Trivia Game</h1>
+    <h1>Mythology Trivia</h1>
     <div class="select-category">
         <label for="trivia-category">Select Category:</label>
         <select id="trivia-category" class="form-control">
