--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="game-container">
-    <h1>Mythology Trivia</h1>
+    <h1>Trivia Game</h1>
 
     <!-- Start Screen -->
     <div id="start-screen">
