--- a/index.html
+++ b/index.html
@@ -7,49 +7,44 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="game-container">
-    <h1>Trivia Game</h1>
-
-    <!-- Start Screen -->
-    <div id="start-screen">
-        <div class="select-category">
-            <label for="trivia-category">Select Category:</label>
-            <select id="trivia-category" class="form-control">
-                <option value="any">Any Category</option>
-                <option value="9">General Knowledge</option>
-                <option value="10">Entertainment: Books</option>
-                <option value="11">Entertainment: Film</option>
-                <option value="12">Entertainment: Music</option>
-                <option value="13">Entertainment: Musicals & Theatres</option>
-                <option value="14">Entertainment: Television</option>
-                <option value="15">Entertainment: Video Games</option>
-                <option value="16">Entertainment: Board Games</option>
-                <option value="17">Science & Nature</option>
-                <option value="18">Science: Computers</option>
-                <option value="19">Science: Mathematics</option>
-                <option value="20">Mythology</option>
-                <option value="21">Sports</option>
-                <option value="22">Geography</option>
-                <option value="23">History</option>
-                <option value="24">Politics</option>
-                <option value="25">Art</option>
-                <option value="26">Celebrities</option>
-                <option value="27">Animals</option>
-                <option value="28">Vehicles</option>
-                <option value="29">Entertainment: Comics</option>
-                <option value="30">Science: Gadgets</option>
-                <option value="31">Entertainment: Japanese Anime & Manga</option>
-                <option value="32">Entertainment: Cartoon & Animations</option>
-            </select>
-            <button id="start-button" onclick="startGame()">Start Game</button>
-        </div>
-    </div>
-
-    <!-- Game Screen -->
-    <div id="game-screen" style="display: none;">
-        <div id="question-container"></div>
-        <button id="next-button" onclick="loadNextQuestion()" disabled>Next Question</button>
-        <div id="score-container">Score: <span id="score">0</span></div>
+<div id="start-screen">
+    <h1>Welcome to the Trivia Game</h1>
+    <label for="trivia-category">Choose a Category:</label>
+    <select id="trivia-category">
+        <option value="any">Any Category</option>
+        <option value="9">General Knowledge</option>
+        <option value="10">Entertainment: Books</option>
+        <option value="11">Entertainment: Film</option>
+        <option value="12">Entertainment: Music</option>
+        <option value="13">Entertainment: Musicals & Theatres</option>
+        <option value="14">Entertainment: Television</option>
+        <option value="15">Entertainment: Video Games</option>
+        <option value="16">Entertainment: Board Games</option>
+        <option value="17">Science & Nature</option>
+        <option value="18">Science: Computers</option>
+        <option value="19">Science: Mathematics</option>
+        <option value="20">Mythology</option>
+        <option value="21">Sports</option>
+        <option value="22">Geography</option>
+        <option value="23">History</option>
+        <option value="24">Politics</option>
+        <option value="25">Art</option>
+        <option value="26">Celebrities</option>
+        <option value="27">Animals</option>
+        <option value="28">Vehicles</option>
+        <option value="29">Entertainment: Comics</option>
+        <option value="30">Science: Gadgets</option>
+        <option value="31">Entertainment: Japanese Anime & Manga</option>
+        <option value="32">Entertainment: Cartoon & Animations</option>
+    </select>
+    <button id="start-button" onclick="startGame()">Start Game</button>
+</div>
+<div id="game-screen" style="display: none;">
+    <div id="preloader" style="display: none;">Loading...</div>
+    <div id="question-container"></div>
+    <button id="next-button" style="display: none;" onclick="loadNextQuestion()">Next Question</button>
+    <div id="score-container">
+        <p>Score: <span id="score">0</span></p>
     </div>
 </div>
 <script src="script.js"></script>
