--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <button id="start-button" onclick="startGame()">Start Game</button>
 </div>
 <div id="game-screen" style="display: none;">
-    <div id="preloader" style="display: none;">Loading...</div>
+    <div id="preloader" style="display: none;">Loading Game ...</div>
     <div id="question-container"></div>
-    <button id="next-button" style="display: none;" onclick="loadNextQuestion()">Next Question</button>
+    <button id="next-button" onclick="loadNextQuestion()">Next Question</button>
     <div id="score-container">
         <p>Score: <span id="score">0</span></p>
     </div>
