--- a/index.html
+++ b/index.html
@@ -9,43 +9,47 @@
 <body>
 <div id="start-screen">
     <h1>Welcome to the Trivia Game</h1>
-    <label for="trivia-category">Choose a Category:</label>
-    <select id="trivia-category">
-        <option value="any">Any Category</option>
-        <option value="9">General Knowledge</option>
-        <option value="10">Entertainment: Books</option>
-        <option value="11">Entertainment: Film</option>
-        <option value="12">Entertainment: Music</option>
-        <option value="13">Entertainment: Musicals & Theatres</option>
-        <option value="14">Entertainment: Television</option>
-        <option value="15">Entertainment: Video Games</option>
-        <option value="16">Entertainment: Board Games</option>
-        <option value="17">Science & Nature</option>
-        <option value="18">Science: Computers</option>
-        <option value="19">Science: Mathematics</option>
-        <option value="20">Mythology</option>
-        <option value="21">Sports</option>
-        <option value="22">Geography</option>
-        <option value="23">History</option>
-        <option value="24">Politics</option>
-        <option value="25">Art</option>
-        <option value="26">Celebrities</option>
-        <option value="27">Animals</option>
-        <option value="28">Vehicles</option>
-        <option value="29">Entertainment: Comics</option>
-        <option value="30">Science: Gadgets</option>
-        <option value="31">Entertainment: Japanese Anime & Manga</option>
-        <option value="32">Entertainment: Cartoon & Animations</option>
-    </select>
+    <div class="select-category">
+        <label for="trivia-category">Choose a Category:</label>
+        <select id="trivia-category" class="form-control">
+            <option value="any">Any Category</option>
+            <option value="9">General Knowledge</option>
+            <option value="10">Entertainment: Books</option>
+            <option value="11">Entertainment: Film</option>
+            <option value="12">Entertainment: Music</option>
+            <option value="13">Entertainment: Musicals & Theatres</option>
+            <option value="14">Entertainment: Television</option>
+            <option value="15">Entertainment: Video Games</option>
+            <option value="16">Entertainment: Board Games</option>
+            <option value="17">Science & Nature</option>
+            <option value="18">Science: Computers</option>
+            <option value="19">Science: Mathematics</option>
+            <option value="20">Mythology</option>
+            <option value="21">Sports</option>
+            <option value="22">Geography</option>
+            <option value="23">History</option>
+            <option value="24">Politics</option>
+            <option value="25">Art</option>
+            <option value="26">Celebrities</option>
+            <option value="27">Animals</option>
+            <option value="28">Vehicles</option>
+            <option value="29">Entertainment: Comics</option>
+            <option value="30">Science: Gadgets</option>
+            <option value="31">Entertainment: Japanese Anime & Manga</option>
+            <option value="32">Entertainment: Cartoon & Animations</option>
+        </select>
+    </div>
     <button id="start-button" onclick="startGame()">Start Game</button>
 </div>
-<div id="game-screen" style="display: none;">
-    <div id="preloader" style="display: none;">Loading Game ...</div>
+<div id="game-screen">
+    <div id="preloader">Loading...</div>
     <div id="question-container"></div>
-    <button id="next-button" onclick="loadNextQuestion()">Next Question</button>
-    <div id="score-container">
+    <div id="info-container">
+        <p>Total Questions: <span id="total-questions">0</span></p>
+        <p>Remaining Questions: <span id="remaining-questions">0</span></p>
         <p>Score: <span id="score">0</span></p>
     </div>
+    <button id="next-button" onclick="loadNextQuestion()">Next Question</button>
 </div>
 <script src="script.js"></script>
 </body>
