--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <p>Remaining Questions: <span id="remaining-questions">0</span></p>
         <p>Score: <span id="score">0</span></p>
     </div>
+    <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous Question</button>
     <button id="next-button" onclick="loadNextQuestion()">Next Question</button>
 </div>
 <script src="script.js"></script>
