feat: Ensure users complete current question before moving to the next
- Added checks to disable the "Next" button until the current question is answered.
- Updated the "Previous" button logic to ensure users can navigate back but cannot skip questions.
- Updated selectAnswer function to track answered questions and disable buttons for answered questions.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>Score: <span id="score">0</span></p>
     </div>
     <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous Question</button>
-    <button id="next-button" onclick="loadNextQuestion()">Next Question</button>
+    <button id="next-button" onclick="loadNextQuestion()" disabled>Next Question</button>
 </div>
 <script src="script.js"></script>
 </body>
