feat: Add loading bar animation for next question transition
- Added a loading bar element to the HTML.
- Implemented a left-to-right loading bar animation when a question is marked complete.
- Enhanced user experience with a visual indication of the transition to the next question.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous Question</button>
     <button id="next-button" onclick="loadNextQuestion()" disabled>Next Question</button>
 </div>
+<div id="loading-bar"></div>
 <script src="script.js"></script>
 </body>
 </html>
