Fixed the styles for result page and removed the progress bar!

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <p>Score: <span id="score">0</span></p>
     </div>
     <div class="navigation-buttons">
-        <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous Question</button>
-        <button id="next-button" onclick="loadNextQuestion()" disabled>Next Question</button>
+        <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous</button>
+        <button id="next-button" onclick="loadNextQuestion()" disabled>Next</button>
     </div>
 </div>
 <div id="loading-bar"></div>
