feat: Implement timer for each question
- Added a countdown timer that resets for each question.
- Marked questions as incorrect if the timer runs out.
- Updated HTML to include a timer display.
- Enhanced CSS for styling the timer display.

--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
     </div>
     <div id="question-container"></div>
     <div id="info-container">
+        <p id="timer">Time left: 15 seconds</p> <!-- Timer display -->
         <p>Score: <span id="score">0</span></p>
     </div>
     <div class="navigation-buttons">
-        <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous</button>
-        <button id="next-button" onclick="loadNextQuestion()" disabled>Next</button>
+        <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous Question</button>
+        <button id="next-button" onclick="loadNextQuestion()" disabled>Next Question</button>
     </div>
 </div>
 <div id="loading-bar"></div>
