feat: Add top and bottom progress bars for time left
- Added top and bottom progress bars that indicate the time left for each question.
- Updated the startTimer function to update the progress bars based on the remaining time.
- Adjusted CSS for new progress bars.
- Ensured smooth transitions and accurate percentage updates.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 </div>
 <div id="preloader">Loading...</div>
 <div id="game-screen" class="screen">
+    <div id="progress-bar-top">
+        <div id="time-progress-top"></div>
+    </div>
     <div id="progress-bar">
         <div id="progress"></div>
     </div>
@@ -70,7 +73,9 @@
         <button id="next-button" onclick="loadNextQuestion()" disabled>Next Question</button>
     </div>
 </div>
-<div id="loading-bar"></div>
+<div id="progress-bar-bottom">
+    <div id="time-progress-bottom"></div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
