feat: Add top and bottom progress bars for time left
- Added top and bottom progress bars that indicate the time left for each question.
- Updated the startTimer function to update the progress bars based on the remaining time.
- Adjusted CSS for new progress bars, ensuring smooth transitions and accurate percentage updates.
- Ensured loading bar animation only triggers if the element exists.
- Improved the layout of the game inner content.

--- a/index.html
+++ b/index.html
@@ -60,21 +60,23 @@
     <div id="progress-bar-top">
         <div id="time-progress-top"></div>
     </div>
-    <div id="progress-bar">
-        <div id="progress"></div>
+    <div class="game-inner">
+        <div id="progress-bar">
+            <div id="progress"></div>
+        </div>
+        <div id="question-container"></div>
+        <div id="info-container">
+            <p id="timer">Time left: 15 seconds</p> <!-- Timer display -->
+            <p>Score: <span id="score">0</span></p>
+        </div>
+        <div class="navigation-buttons">
+            <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous Question</button>
+            <button id="next-button" onclick="loadNextQuestion()" disabled>Next Question</button>
+        </div>
     </div>
-    <div id="question-container"></div>
-    <div id="info-container">
-        <p id="timer">Time left: 15 seconds</p> <!-- Timer display -->
-        <p>Score: <span id="score">0</span></p>
+    <div id="progress-bar-bottom">
+        <div id="time-progress-bottom"></div>
     </div>
-    <div class="navigation-buttons">
-        <button id="previous-button" onclick="loadPreviousQuestion()" disabled>Previous Question</button>
-        <button id="next-button" onclick="loadNextQuestion()" disabled>Next Question</button>
-    </div>
-</div>
-<div id="progress-bar-bottom">
-    <div id="time-progress-bottom"></div>
 </div>
 <script src="script.js"></script>
 </body>
