feat: Add input field for username on the first screen chore: create leaderboard page code: add styling for input field

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="container">
         <h1>Trivia Game</h1>
         <p>Test your knowledge across various categories and difficulties!</p>
+        <div class="input-username">
+        <label for="trivia-category">Choose Your Name:</label>
+         <input type="text" required id="username">
+        </div>
         <div class="select-category">
             <label for="trivia-category">Choose a Category:</label>
             <select id="trivia-category" class="form-control">
