feat: Add input validation for username field on the first screen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="input-username">
         <label for="trivia-category">Choose Your Name:</label>
          <input type="text" required id="username">
+         <span class="input-error">
+            Please enter your name
+         </span>
         </div>
         <div class="select-category">
             <label for="trivia-category">Choose a Category:</label>
