--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Game - Leaderboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/leaderboard.css">
 </head>
 <body>
-    
+     <div class="leaderboard">
+        
+     </div>
 <script src="script.js"></script>
 </body>
 </html>
