chore: Update leaderboard.html with new stylesheet path add styles for leaderboard refactor: add timestamp to mongoose model

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,9 +7,20 @@
     <link rel="stylesheet" href="styles/leaderboard.css">
 </head>
 <body>
-     <div class="leaderboard">
-        
-     </div>
+    <main>
+        <div class="container">
+            <div class="leaderboard">
+                <h1>Leaderboard</h1>
+                <!-- list of winners -->
+                <ul id="leaderboard-list">
+                     <li>
+                        <span>01</span>
+                        <span class="name">John Doe</span>
+                        <span class="score">100</span>
+                    </li> 
+            </div>
+        </div>
+    </main>
 <script src="script.js"></script>
 </body>
 </html>
