--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Game - Leaderboard</title>
     <link rel="stylesheet" href="styles/leaderboard.css">
 </head>
+
 <body>
     <main>
         <div class="container">
             <div class="leaderboard">
                 <h1>Leaderboard</h1>
+                <!-- add headers -->
+                <div class="table-headings">
+                    <span>Rank</span>
+                    <span>Name</span>
+                    <span>Score</span>
+                </div>
+
                 <!-- list of winners -->
                 <ul id="leaderboard-list">
-                     <li>
-                        <span>01</span>
-                        <span class="name">John Doe</span>
-                        <span class="score">100</span>
-                    </li> 
+                    <!-- dynamically insert fetched items here -->
+                </ul>
             </div>
         </div>
     </main>
-<script src="script.js"></script>
+    <script src="scripts/leaderboard.js"></script>
 </body>
+
 </html>
