--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Game</title>
     <link rel="stylesheet" href="styles.css">
+    <script>
+        if (window.location.href === "https://fahdi.github.io/MythologyTriviaGame/") {
+            window.location.replace("https://mythology-trivia-game.vercel.app/");
+        }
+    </script>
 </head>
 <body>
 <div id="start-screen" class="screen">
