--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <script>
-        if (window.location.href === "https://fahdi.github.io/MythologyTriviaGame/") {
-            window.location.replace("https://mythology-trivia-game.vercel.app/");
+        if (window.location.href === 'https://fahdi.github.io/MythologyTriviaGame/') {
+            window.location.replace('https://mythology-trivia-game.vercel.app/');
         }
     </script>
 </head>
@@ -17,9 +17,9 @@
         <h1>Trivia Game</h1>
         <p>Test your knowledge across various categories and difficulties!</p>
         <div class="input-username">
-        <label for="trivia-category">Choose Your Name:</label>
-         <input type="text" required id="username">
-         <span class="input-error">
+            <label for="trivia-category">Choose Your Name:</label>
+            <input type="text" required id="username">
+            <span class="input-error">
             Please enter your name
          </span>
         </div>
@@ -86,6 +86,6 @@
         <div id="time-progress-bottom"></div>
     </div>
 </div>
-<script src="script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
