Put the redirection back in now that it's all working

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <title>Trivia Game</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script>
-        // if (window.location.href === 'https://fahdi.github.io/MythologyTriviaGame/') {
-        //     window.location.replace('https://mythology-trivia-game.vercel.app/');
-        // }
+        if (window.location.href === 'https://fahdi.github.io/MythologyTriviaGame/') {
+            window.location.replace('https://mythology-trivia-game.vercel.app/');
+        }
     </script>
 </head>
 <body>
